@@ -54,14 +54,7 @@ useragent =
 
 ; Authentication to use when SSPI is unavailable. Format is domain\\username
 ; Service name "Px" and this username are used to retrieve the password using
-; Python keyring. Px only retrieves credentials and storage should be done
-; directly in the keyring backend.
-;   On Windows, Credential Manager is the recommended backed and can be accessed
-;   from Control Panel > User Accounts > Credential Manager > Windows Credentials.
-;   Create a generic credential with Px as the network address, this username
-;   and corresponding password.
-;   On Linux, Gnome Keyring or KWallet can be used to store passwords. For headless
-;   systems, the keyring_jeepney package might be needed.
+; Python keyring if available.
 username =
 
 ; Force instead of discovering upstream proxy type
